[package]
name = "tw-stairway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitter-v2 = "0.1.7"
dotenvy = "0.15.5"
once_cell = "1.15.0"
tokio = { version = "1.21.2", features = [ "macros", "rt", "test-util" ] }
time = { version = "0.3.15", features = [ "std", "macros" ] }
futures = "0.3.24"
